# Chromebook-Driver-Installer

./: .gitmodules  Cargo.toml  README.md  build.rs  documentation.txt  index.html  package-lock.json  package.json  vite.config.js
src/: download_files.rs  helper.rs  main.js  main.rs  styles.css  todo.txt
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
