[package]
name = "One_Click_Driver_Installer"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
exitfailure = "0.5.1"
failure = "0.1.8"
futures-util = "0.3.31"
indicatif = "0.15.0"
inquire = "0.7.5"
reqwest = {version = "0.12.8", features=["stream"]}
terminal-link = "0.1.0"
serde_json = "1.0.133"
execute = "0.2.13"



